--- a/sample-python/Procfile
+++ b/sample-python/Procfile
@@ -1,1 +1,1 @@
-web: FLASK_APP=web.py python3 -m flask run --host=0.0.0.0 --port=$PORT
+web: gunicorn --bind :$PORT --workers 1 --threads 8 --timeout 0 main:app
