--- a/sample-node/package.json
+++ b/sample-node/package.json
@@ -2,12 +2,12 @@
   "name": "sample-node",
   "version": "0.0.1",
   "dependencies": {
-    "express": "4.18.2"
+    "express": ">=4.18.2"
   },
   "scripts": {
     "start": "node web.js"
   },
   "engines": {
-    "node": "12.11.0"
+    "node": ">=16"
   }
 }
