add pnpm sample to README.md

--- a/sample-node-pnpm/package.json
+++ b/sample-node-pnpm/package.json
@@ -4,8 +4,8 @@
   "description": "A Node.js app using express and pnpm.",
   "main": "index.js",
   "engines": {
-    "node": "18.x.x",
-    "pnpm": "8.6.0"
+    "node": ">=18",
+    "pnpm": ">=8"
   },
   "scripts": {
     "start": "node index.js"
